--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,9 @@
  <!DOCTYPE html>
  <html>
     <head>
-      <title>My Webpage!</title>
+        <title>My Webpage!</title>
       <head/>
       <body>
-         Hello, world!
+         <img src= "cat.jpg" width="50%">
       </body>
 </html>
